# goit-pythonweb-hw-06

./: README.md  connect.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 175f0f1cd57a_initial_migration.py  55ccf6a863df_init.py
